--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,10 @@
 
 <%= yield %>
 
+
+  <div class="row">
+    <div class="span4">..</div>
+    <div class="span8">...</div>
+  </div>
 </body>
 </html>
