--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,5 @@
+<% @post.tags.build %>
+
 <%= form_for(@post) do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
@@ -15,10 +17,22 @@
     <%= f.label :title %><br />
     <%= f.text_field :title %>
   </div>
+
+  <div class="field">
+    <%= f.label :url %><br/>
+    <%= f.text_field :url %>
+  </div>
+
   <div class="field">
     <%= f.label :content %><br />
-    <%= f.text_area :content %>
+
+    <%= f.text_area :content, :rows => 8 %>
   </div>
+
+  <h2>Tags</h2>
+  <%= render :partial => 'tags/form',
+             :locals => { :form => f } %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
