--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,6 +10,19 @@
   <%= @post.content %>
 </p>
 
+<p>
+  <b>Tags:</b>
+  <%= @post.tags.map { |t| t.title }.join(", ") %>
+</p>
+
+<hr>
+<h2>comments:</h2>
+
+<%= render @post.comments %>
+<hr>
+
+<h2>Add a comment:</h2>
+<%= render "comments/form" %>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
