--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>博客</title>
+  <title>博客<%= yield :title %></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -21,7 +21,9 @@
     <div class="row-fluid">
       <div class="span2">
         <ul claass="nav nav-list bs-docs-sidenav affix">
+          
           <li><a href="/">Home</a></li>
+          <li><a href="/search">Search</a></li>
           <li><a href="/categories">Categories</a></li>
           <li><a href="/posts">Posts</a></li>
           <li><a href="/comments">Comments</a></li>
