add paginate function to post

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -28,7 +28,12 @@
     <%= f.label :url %><br/>
     <%= f.text_field :url %>
   </div>
-
+  
+  <div class="field">
+    <%= f.label :picture %><br/>
+    <%= f.file_field :picture %>
+  </div>
+  
   <div class="field">
     <%= f.label :content %><br />
 
