--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -2,6 +2,7 @@
 <table>
   <tr>
     <th>Title</th>
+    <th>Category</th>
     <th>Created</th>
     <th>Updated</th>
     <th></th>
@@ -11,8 +12,9 @@
   <% @posts.each do |post| %>
   <tr>
     <td><%= post.title %></td>
-    <td><%= post.created_at %></td>
-    <td><%= post.updated_at %></td>
+    <td><%= post.category.title %></td>
+    <td><%= post.created_at.localtime.to_s(:db) %></td>
+    <td><%= post.updated_at.localtime.to_s(:db) %></td>
     <td><%= link_to 'Edit', edit_admin_post_path(post) %></td>
     <td><%= link_to 'Delete',[:admin, post], :method => :delete, :confirm => 'are you sure?' %></td>
     <td></td>
