--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,6 +1,19 @@
 <%= form_for([@post, @post.comments.build]) do |f| %>
 
   <div class="field">
+    <%= f.label :commenter %><br/>
+    <%= f.text_field :commenter %>
+  </div>
+  <div class="field">
+    <%= f.label :email %><br/>
+    <%= f.text_field :email %>
+  </div>
+
+  <div class="field">
+    <%= f.label :url %><br/>
+    <%= f.text_field :url %>
+  </div>
+  <div class="field">
     <%= f.label :title %><br />
     <%= f.text_field :title %>
   </div>
