--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -21,7 +21,7 @@
 
   <div class="field">
     <%= f.label :content %><br/>
-    <%= f.text_area :content, :cols => 40, :rows => 4, :class => :mceEditor %>
+    <%= f.cktext_area :content, :toolbar => 'Full', :width => 800, :height => 400 %>
   </div>
 
   <h2>Tags</h2>
