--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -5,8 +5,8 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
 
-
- 
+  <%= javascript_include_tag "ckeditor/ckeditor" %>
+  
   <%= csrf_meta_tags %>
 </head>
 <body>
