--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,30 +1,12 @@
-<%= content_for :title do %>
--Posts
-<% end %>
+<% content_for :title do %>Posts<% end %>
 
-<h1>Listing posts</h1>
+<h1>Posts</h1>
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @posts.each do |post| %>
-  <tr>
-    <td><%= post.title %></td>
-    <td><%= link_to 'Show', post %></td>
-    <td><%= link_to 'Edit', edit_post_path(post) %></td>
-    <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= will_paginate @posts %>
-<br/>
-
-<%= link_to 'New Post', new_post_url %>
+<div>
+  <% @posts.each do |post| %>
+    <div><%= link_to post.title, post%></div>
+    <div>
+      <%= post.content %>
+    </div>
+  <% end %>
+<div>
