friendly url "id-slug"

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,8 @@
 <h1><%= @post.title %></h1>
+
+<div>
+  <%= link_to @post.category.title, @post.category %>
+</div>
 <div>
   <%= @post.content%>
 </div>
