--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,14 +15,7 @@
   </nav>
 
   <header>
-  
-  <div class="container blog-header" style="background:grey;height:100px;">
-    <div class="row">
-       <div class="span3">
-         header
-       </div>
-    </div>
-  </div>
+    <%= render 'layouts/header' %>
   </header>
 
   <div class="container blog-body" style="height:800px;">
@@ -36,21 +29,13 @@
         <%= yield %>
       </div>
       <div class="span3">
-        <ul>
-          <li>ruby</li>
-        </ul>
+        <%= render 'layouts/sidebar'%>
       </div>
     </div>
   </div>
 
   <footer>
-  <div class="container" style="background:grey;">
-    <div class="row">
- 
-   
-      <div class="span3">copytright@<a href="#">woaigithub</a></div>
-    </div>
-  </div>
+  <%= render 'layouts/footer' %>
   </footer>
 
 </body>
