improve sign in and sign up, increase password authentication.

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -17,7 +17,19 @@
       <%= f.text_field :nickname %>
     </div>
   </div>
+  <div class="control-group">
+    <%= f.label :password, :class => "control-label" %>
+    <div class="groups">
+      <%= f.password_field :password %>
+    </div>
+  </div>
 
+  <div class="control-group">
+    <%= f.label :password_confirmation, :class => "control-label" %>
+    <div class="groups">
+      <%= f.password_field :password_confirmation %>
+    </div>
+  </div>
   <div class="control-group">
     <div class="groups">
     <%= f.submit "Sign in" %>
