--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
-<div class="container blog-header" style="background:grey;height:100px;">
+<div class="container blog-header" style="background:grey;min-height:100px;">
     <div class="row">
        <div class="span3">
-         header
+         
        </div>
     </div>
   </div>
