--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="background:grey;">
+<div class="container" style="background:grey;min-height:100px">
     <div class="row">
 
 
