--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,7 +18,7 @@
           </div>
 	    </div>
 	    <div claass="row">
-	      <%= post.summary %>
+	      <%= strip_tags(post.summary) %>
 	    </div>
     </div>
   </div>
