create tag, edit tag

--- a/app/views/layouts/_admin_sidebar.html.erb
+++ b/app/views/layouts/_admin_sidebar.html.erb
@@ -10,4 +10,10 @@
     <li><%= link_to "new category", new_admin_category_path %></li>
     <li><%= link_to "categories", admin_categories_path %></li>
   </ul>
+
+  <ul class="nav nav-list">
+    <li>Tag</li>
+    <li><%= link_to "new tag", new_admin_tag_path %></li>
+    <li><%= link_to "tags", admin_tags_path %></li>
+  </ul>
 </div>
