--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -5,7 +5,8 @@
 
   <ul class="nav nav-list">
   	<li>Category</li>
-  	<% if !@categories.blank? and @categories.any? %>
+      <li><%= link_to "All", posts_path %></li>
+  	  <% if !@categories.blank? and @categories.any? %>
       <% @categories.each do |category| %>
         <li><%= link_to category.title, category %></li>
       <% end %>
