add mailer test

--- a/app/views/user_mailer/registration_confirmation.html.erb
+++ b/app/views/user_mailer/registration_confirmation.html.erb
@@ -4,4 +4,4 @@ Thank you for registering!
 
 Welcome to come back.
 
-<%= link_to "Edit profile", edit_user_url(@user.id, :host => "localhost:3000") %>
+<%= link_to "Edit profile", edit_user_url(@user.id) %>
