add markdown for post content and comment content

--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -47,7 +47,7 @@
     </div>
 
     <div class="control-group">
-      <%= f.label :content, :class => "control-lable" %>
+      <%= f.label :content, "content(support markdown)", :class => "control-lable" %>
       <div class="groups">
 
         <%= f.text_area :content, :rows => 10, :cols => 20 %>
