--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -24,7 +24,7 @@
     </div>
 
     <div calss="control-group">
-      <%= f.label :content, :class=>"control-label" %>
+      <%= f.label :content, "content(support markdown)", :class=>"control-label" %>
       <div class="groups">
         <%= f.text_area :content, :rows => 6, :cols => 20 %>
       </div>
