--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -4,6 +4,10 @@
   
 
   <ul class="nav nav-list">
+    <% if signed_in? %>
+      <li>Post</li>
+      <li><%= link_to "New Post", new_admin_post_path %></li>
+    <% end %>
   	<li>Category</li>
       <li><%= link_to "All", posts_path %></li>
   	  <% if !@categories.blank? and @categories.any? %>
